# practice-similarities

./: .env  .gitignore  .luarc.json  CODE_OF_CONDUCT.md  Pipfile  README.md  setup.cfg
docs/: conf.py
docs/contributor_guide/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  writing_sphinx_documentation.md
docs/user_guide/: README.md
notebooks/: eda.qmd  kmeans.qmd
src/: __init__.py
src/practice_similarities/: run_pipeline.py
src/practice_similarities/pipeline/: __init__.py  import_data.py  transform_data.py
tests/: test_example_module.py
